--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hello World</title>
+    <link rel="stylesheet" type="text/css" href="assets/styles/style.css">
   </head>
   <body>
     <h2>About</h2>
