return to the initial form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h2>welcome to my website</h2>
+    <h2>About</h2>
     <hr>
     <p>We are supposed to learn forking and collaborating using this repo</p>
   </body>
