--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello World</title>
+    <title>Hello World by George Mogaka</title>
   </head>
   <body>
     <h2>About</h2>
+    <p>HeHeHe!</p>
     <hr>
     <p>We are supposed to learn forking and collaborating using this repo</p>
   </body>
