--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello World</title>
+    <link rel="stylesheet"  href="style.css">
+    <title>Sample Hello World </title>
   </head>
   <body>
-    <h2>About</h2>
+    <section class="main">
+    <h2>Hello Word</h2>
     <hr>
     <p>We are supposed to learn forking and collaborating using this repo</p>
+      </section>
   </body>
 </html>
