--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h2>About</h2>
     <hr>
-    <p>We are supposed to learn forking and collaborating using this repo</p>
+    <p>We are supposed to learn forking and collaborating using this repo.</p>
   </body>
 </html>
