--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello World</title>
-  </head>
-  <body>
-    <h2>About</h2>
-    <hr>
-    <p>We are supposed to learn forking and collaborating using this repo</p>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Hello World</title>
+</head>
+
+<body>
+  <h2>About</h2>
+  <hr>
+  <p>We are supposed to learn forking and collaborating using this repo</p>
+  <p>always specify which account we are cloning from</p>
+</body>
+
 </html>
