--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <h2>About</h2>
     <hr>
     <p>We are supposed to learn forking and collaborating using this repo</p>
+
+    <div>
+      <h2>What is forking</h2>
+    </div>
   </body>
 </html>
