--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h2>About</h2>
     <hr>
     <p>We are supposed to learn forking and collaborating using this repo</p>
+    <hr>
+      <h1 class="el-h1">I just forked this project and edited it</h1>
   </body>
 </html>
