--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h2>About</h2>
     <hr>
     <p>We are supposed to learn forking and collaborating using this repo</p>
+    <p>We are supposed to learn forking and collaborating using this repo</p>
   </body>
 </html>
