st:paragraph-styling - optimized paragraph styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h2>About</h2>
     <hr>
     <p>We are supposed to learn forking and collaborating using this repo</p>
+    <p>A fork is a copy of a repository and are used to propose change sto someone's project</p>
   </body>
 </html>
 
