--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
+
+<head>
+    <meta charset="utf-8" />
     <title>Hello World</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h2>About</h2>
-    <hr>
+    <hr />
     <p>We are supposed to learn forking and collaborating using this repo</p>
-  </body>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6" style="color: red; height: 400px"></div>
+            <div class="col-lg-6" style="color: blue; height: 400px"></div>
+        </div>
+    </div>
+</body>
+
 </html>
